--- a/www/common/css/style.css
+++ b/www/common/css/style.css
@@ -52,6 +52,7 @@ a, a:hover {
 
 input, textarea, button {
   color: #111111;
+  font-family: 'OpenSans';
   font-size: 1rem;
   padding: 0.1rem 0.5rem;
   margin: 0.2rem;
